<resources>
    <string name="app_name">GoodHikes</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_app_id">ferrous-linker-121901</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--    Menu Labels    -->
    <string name="title_activity_settings">Settings</string>

    <!--    Setting Labels    -->
    <string name="map_pref">Map Types</string>
    <string name="interval_pref">Interval</string>
    <string name="login">Login</string>
    <string name="profile">User Profile</string>
    <string name="logout">Logout</string>

    <!-- Default Map Type Hybrid -->
    <string name="map_type_default">3</string>

    <!-- Default GPS frequency update intervals -->
    <string name="interval_pref_default">3000</string>

    <!-- Strings for DB connection -->
    <string name="URL_Login">http://chelseahu.comlu.com/goodhikes_php/Login.php</string>
    <string name="URL_Register">http://chelseahu.comlu.com/goodhikes_php/Register.php</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_history_list">HistoryItems</string>
    <string name="title_history_detail">History Detail</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Info Section in MapsActivity -->
    <string name="duration_label">Duration</string>
    <string name="distance_label">Distance</string>
    <string name="saving_route">Saving new route</string>
    <string name="proceed">Save</string>
    <string name="discard">Discard</string>
    <string name="description">Description</string>
    <string name="stop_tracking_dialog">Stop tracking?</string>
    <string name="stop_tracking">Stop</string>
    <string name="pause_tracking">Pause</string>
    <string name="private_route">Private route?</string>
    <string name="note">Note</string>
    <string name="add_milestone">Add new milestone</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="start_tracking">Start tracking</string>
    <string name="new_route">New route</string>
    <string name="follow_the_white_rabbit">Follow the route</string>
    <string name="title_activity_statistics">StatisticsActivity</string>

</resources>
