<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Map type settings -->
    <ListPreference
        android:key="@string/map_pref"
        android:title="Map Type"
        android:entries="@array/map_types"
        android:entryValues="@array/map_type_values"
        android:defaultValue="2"/>

    <!-- Update frequency settings -->
    <ListPreference
        android:key="@string/interval_pref"
        android:title="Location Update Frequency"
        android:entries="@array/update_frequency"
        android:entryValues="@array/update_frequency_values"
        android:defaultValue="3000"/>

    <!-- Login button -->
    <Preference
        android:key="@string/login"
        android:title="Login"
        android:visibility="gone" />

    <!-- Profile button -->
    <Preference
        android:key="@string/profile"
        android:title="User Profile"
        android:visibility="gone" />


    <!-- Logout button -->
    <Preference
        android:key="@string/logout"
        android:title="Logout"
        android:visibility="gone" />

</PreferenceScreen>